List.of() and imports