@@ -56,7 +56,7 @@ public class ARSRoomCounts {
                 while (rs.next()) {
                     String json = JSON_FLUFF.matcher(rs.getString("json")).replaceAll("");
                     double num = 0;
-                    List<String> materials = new ArrayList<>(Arrays.asList(json.split(",")));
+                    List<String> materials = new ArrayList<>(List.of(json.split(",")));
                     materials.removeAll(STONE);
                     for (String material : materials) {
                         // only count if not a console block
