@@ -22,25 +22,24 @@ import me.eccentric_nz.TARDIS.utility.TARDISStringUtils;
 import org.bukkit.Material;
 import org.bukkit.NamespacedKey;
 
-import java.util.Arrays;
 import java.util.List;
 
 public enum GUIAutonomous {
 
     // TARDIS Autonomous
     AUTONOMOUS_TYPE(SwitchVariant.AUTO_TYPE.getKey(), 0, Material.REPEATER),
-    TYPE_INFO(GuiVariant.INFO.getKey(), 1, Material.BOWL, Arrays.asList("Choose the location you want", "the TARDIS to automatically", "return to when you die.")),
-    HOME(GuiVariant.HOME.getKey(), 3, Material.BOWL, Arrays.asList("Always go to the", "TARDIS's home location")),
-    AREAS(GuiVariant.AREAS.getKey(), 4, Material.BOWL, Arrays.asList("Go to the an area", "in the death world.", "If a parking spot cannot", "be found, use the fallback", "specified below.")),
-    CONFIGURED_AREAS(GuiVariant.CONFIGURED.getKey(), 5, Material.BOWL, Arrays.asList("Go to the server's", "default area(s).", "If a parking spot cannot", "be found, use the fallback", "specified below.")),
-    CLOSEST(GuiVariant.CLOSEST.getKey(), 6, Material.BOWL, Arrays.asList("Go to the TARDIS's", "home location or an area", "whichever is closest.")),
-    SAVE(GuiVariant.SAVE.getKey(), 7, Material.BOWL, Arrays.asList("Go to a TARDIS", "saved destination.")),
+    TYPE_INFO(GuiVariant.INFO.getKey(), 1, Material.BOWL, List.of("Choose the location you want", "the TARDIS to automatically", "return to when you die.")),
+    HOME(GuiVariant.HOME.getKey(), 3, Material.BOWL, List.of("Always go to the", "TARDIS's home location")),
+    AREAS(GuiVariant.AREAS.getKey(), 4, Material.BOWL, List.of("Go to the an area", "in the death world.", "If a parking spot cannot", "be found, use the fallback", "specified below.")),
+    CONFIGURED_AREAS(GuiVariant.CONFIGURED.getKey(), 5, Material.BOWL, List.of("Go to the server's", "default area(s).", "If a parking spot cannot", "be found, use the fallback", "specified below.")),
+    CLOSEST(GuiVariant.CLOSEST.getKey(), 6, Material.BOWL, List.of("Go to the TARDIS's", "home location or an area", "whichever is closest.")),
+    SAVE(GuiVariant.SAVE.getKey(), 7, Material.BOWL, List.of("Go to a TARDIS", "saved destination.")),
     SELECTED_TYPE(null, -1, Material.LIME_WOOL),
     FALLBACK(SwitchVariant.AUTO_DEFAULT.getKey(), 18, Material.REPEATER),
-    FALLBACK_INFO(GuiVariant.INFO.getKey(), 19, Material.BOWL, Arrays.asList("If a preferred location", "cannot be found, choose", "what the TARDIS should do.")),
+    FALLBACK_INFO(GuiVariant.INFO.getKey(), 19, Material.BOWL, List.of("If a preferred location", "cannot be found, choose", "what the TARDIS should do.")),
     GO_HOME(GuiVariant.HOME.getKey(), 21, Material.BOWL),
     STAY(GuiVariant.STAY.getKey(), 22, Material.BOWL),
-    SAVE_SELECTOR(GuiVariant.AUTO_SAVE_SELECTOR.getKey(), 25, Material.BOWL, Arrays.asList("Choose a save", "to travel to -", "click to set.")),
+    SAVE_SELECTOR(GuiVariant.AUTO_SAVE_SELECTOR.getKey(), 25, Material.BOWL, List.of("Choose a save", "to travel to -", "click to set.")),
     SELECTED_DEFAULT(null, -1, Material.LIME_WOOL),
     CLOSE(GuiVariant.CLOSE.getKey(), 35, Material.BOWL);
 
