@@ -23,7 +23,7 @@ import org.bukkit.inventory.ItemFlag;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.meta.ItemMeta;
 
-import java.util.Arrays;
+import java.util.List;
 
 public class TARDISRecipeCategoryInventory {
 
@@ -39,7 +39,7 @@ public class TARDISRecipeCategoryInventory {
         ItemStack info = new ItemStack(Material.BOWL, 1);
         ItemMeta info_im = info.getItemMeta();
         info_im.setDisplayName("Info");
-        info_im.setLore(Arrays.asList("Click a button below", "to see the items", "in that recipe category"));
+        info_im.setLore(List.of("Click a button below", "to see the items", "in that recipe category"));
         info_im.setItemModel(GUIChemistry.INFO.key());
         info.setItemMeta(info_im);
         stack[0] = info;
