@@ -36,7 +36,7 @@ import java.util.List;
 public class LabGUIListener extends TARDISMenuListener {
 
     //    private final TARDIS plugin;
-    private final List<Integer> slots = Arrays.asList(18, 19, 20, 21, 22, 23);
+    private final List<Integer> slots = List.of(18, 19, 20, 21, 22, 23);
 
     public LabGUIListener(TARDIS plugin) {
         super(plugin);
