@@ -35,8 +35,8 @@ import java.util.List;
 
 public class ProductGUIListener extends TARDISMenuListener {
 
-    private final List<Integer> slots = Arrays.asList(0, 1, 2, 9, 10, 11, 18, 19, 20);
-    private final List<Integer> pipe = Arrays.asList(2, 11, 20);
+    private final List<Integer> slots = List.of(0, 1, 2, 9, 10, 11, 18, 19, 20);
+    private final List<Integer> pipe = List.of(2, 11, 20);
 
     public ProductGUIListener(TARDIS plugin) {
         super(plugin);
